{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 63,
  "lineage": "98b65987-78b5-7991-f6c7-7f9685503adb",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fdd69ef34bc1cc22",
            "domain": "vpc",
            "id": "eipalloc-0fdd69ef34bc1cc22",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-234-62-50.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.62.50",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Netflix-PROD-VPC-ap-south-1a",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "tags_all": {
              "Name": "Netflix-PROD-VPC-ap-south-1a",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:145282914747:internet-gateway/igw-028ad4946b0e5b718",
            "id": "igw-028ad4946b0e5b718",
            "owner_id": "145282914747",
            "tags": {
              "Name": "Netflix-PROD-VPC",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "tags_all": {
              "Name": "Netflix-PROD-VPC",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "vpc_id": "vpc-041a576ac50ad118f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fdd69ef34bc1cc22",
            "connectivity_type": "public",
            "id": "nat-05dd9d0a36827aaf0",
            "network_interface_id": "eni-0c14ead52832a3201",
            "private_ip": "30.1.1.12",
            "public_ip": "13.234.62.50",
            "subnet_id": "subnet-0c25a4eac48063709",
            "tags": {
              "Name": "Netflix-PROD-VPC-ap-south-1a",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "tags_all": {
              "Name": "Netflix-PROD-VPC-ap-south-1a",
              "environment": "PROD",
              "owners": "Netflix"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-093abbb0e6358a06e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05dd9d0a36827aaf0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-093abbb0e6358a06e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-028ad4946b0e5b718",
            "id": "r-rtb-015894995dd3512941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-015894995dd351294",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:145282914747:route-table/rtb-093abbb0e6358a06e",
            "id": "rtb-093abbb0e6358a06e",
            "owner_id": "145282914747",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Netflix-PROD-VPC-private",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "tags_all": {
              "Name": "Netflix-PROD-VPC-private",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "timeouts": null,
            "vpc_id": "vpc-041a576ac50ad118f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:145282914747:route-table/rtb-015894995dd351294",
            "id": "rtb-015894995dd351294",
            "owner_id": "145282914747",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Netflix-PROD-VPC-public",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "tags_all": {
              "Name": "Netflix-PROD-VPC-public",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "timeouts": null,
            "vpc_id": "vpc-041a576ac50ad118f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e581a10d2d494ba7",
            "route_table_id": "rtb-093abbb0e6358a06e",
            "subnet_id": "subnet-01cef263d3e53d764"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a2ffb7caf648685",
            "route_table_id": "rtb-093abbb0e6358a06e",
            "subnet_id": "subnet-00bb205c329e1caba"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0635a1a408a279cc3",
            "route_table_id": "rtb-093abbb0e6358a06e",
            "subnet_id": "subnet-06bd1d9297d24e379"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e81c82e844ed4ea0",
            "route_table_id": "rtb-015894995dd351294",
            "subnet_id": "subnet-0c25a4eac48063709"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022e6d3fa5f6bbde7",
            "route_table_id": "rtb-015894995dd351294",
            "subnet_id": "subnet-01a9aba241a4fc7b0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8090b069ec5872b",
            "route_table_id": "rtb-015894995dd351294",
            "subnet_id": "subnet-03d30e8a9d90d5d59"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:145282914747:subnet/subnet-01cef263d3e53d764",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "30.1.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cef263d3e53d764",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145282914747",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Netflix-PROD-VPC-private-ap-south-1a",
              "Type": "Private Subnets",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "tags_all": {
              "Name": "Netflix-PROD-VPC-private-ap-south-1a",
              "Type": "Private Subnets",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "vpc_id": "vpc-041a576ac50ad118f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:145282914747:subnet/subnet-00bb205c329e1caba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "30.1.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bb205c329e1caba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145282914747",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Netflix-PROD-VPC-private-ap-south-1b",
              "Type": "Private Subnets",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "tags_all": {
              "Name": "Netflix-PROD-VPC-private-ap-south-1b",
              "Type": "Private Subnets",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "vpc_id": "vpc-041a576ac50ad118f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:145282914747:subnet/subnet-06bd1d9297d24e379",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "30.1.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bd1d9297d24e379",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145282914747",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Netflix-PROD-VPC-private-ap-south-1c",
              "Type": "Private Subnets",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "tags_all": {
              "Name": "Netflix-PROD-VPC-private-ap-south-1c",
              "Type": "Private Subnets",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "vpc_id": "vpc-041a576ac50ad118f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:145282914747:subnet/subnet-0c25a4eac48063709",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "30.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c25a4eac48063709",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "145282914747",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Netflix-PROD-VPC-public-ap-south-1a",
              "Type": "Public Subnets",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "tags_all": {
              "Name": "Netflix-PROD-VPC-public-ap-south-1a",
              "Type": "Public Subnets",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "vpc_id": "vpc-041a576ac50ad118f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:145282914747:subnet/subnet-01a9aba241a4fc7b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "30.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a9aba241a4fc7b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "145282914747",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Netflix-PROD-VPC-public-ap-south-1b",
              "Type": "Public Subnets",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "tags_all": {
              "Name": "Netflix-PROD-VPC-public-ap-south-1b",
              "Type": "Public Subnets",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "vpc_id": "vpc-041a576ac50ad118f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:145282914747:subnet/subnet-03d30e8a9d90d5d59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "30.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d30e8a9d90d5d59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "145282914747",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Netflix-PROD-VPC-public-ap-south-1c",
              "Type": "Public Subnets",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "tags_all": {
              "Name": "Netflix-PROD-VPC-public-ap-south-1c",
              "Type": "Public Subnets",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "vpc_id": "vpc-041a576ac50ad118f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:145282914747:vpc/vpc-041a576ac50ad118f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "30.1.0.0/16",
            "default_network_acl_id": "acl-007ca4f96d4693eb0",
            "default_route_table_id": "rtb-0e94dcc4a392ec662",
            "default_security_group_id": "sg-0dad3b81b75ff7d97",
            "dhcp_options_id": "dopt-0da0045a21ca3f6fa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-041a576ac50ad118f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e94dcc4a392ec662",
            "owner_id": "145282914747",
            "tags": {
              "Name": "Netflix-PROD-VPC",
              "environment": "PROD",
              "owners": "Netflix"
            },
            "tags_all": {
              "Name": "Netflix-PROD-VPC",
              "environment": "PROD",
              "owners": "Netflix"
            }
          }
        }
      ]
    }
  ]
}